--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 #root {
   --main-color: #1B1B1B;
-  --strawberry-red: #ff0000
+  --strawberry-red: #ff0000;
+  --accent-color: #27B053;
 }
 
 * {
